ellipse added in about, navbar overlap fix in magazine page

--- a/Magazine Page/style.css
+++ b/Magazine Page/style.css
@@ -172,7 +172,11 @@ body {
   margin-right: 20px;
 }
 
-@media (max-width: 600px) {
+.sidebar {
+  z-index: 10;
+}
+
+@media (max-width: 650px) {
   .wrapper {
     display: flex;
     flex-direction: column;
